# RAG

./: README.md  faiss_reader.py  pyproject.toml  requirements.txt  test_ingestion.py  test_query.py
frontend/: streamlit_app.py
prompts/: system_prompt.py
rag/: compressor.py  generator.py  ingestion.py  llm_router.py  pipeline.py  reranker.py  retriever.py
utils/: chunking.py  document_loader.py  embeddings.py
vectorstore/: vector_store.py
vectorstore/faiss_index/: index.faiss  index.pkl
